--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-web": "~0.13.12",
-    "redux": "^4.0.5",
+    "react-redux": "^7.2.2",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
@@ -27,6 +27,7 @@
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
+    "@types/react-redux": "^7.1.16",
     "typescript": "~4.0.0"
   },
   "private": true
