--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "3.0.4",
+    "@react-native-firebase/auth": "^11.1.0",
     "@reduxjs/toolkit": "^1.5.0",
     "date-fns": "^2.19.0",
     "expo": "~40.0.0",
     "expo-app-loading": "^1.0.1",
+    "expo-constants": "~9.3.3",
     "expo-font": "~8.4.0",
     "expo-status-bar": "~1.0.3",
     "firebase": "^8.3.0",
