--- a/app.json
+++ b/app.json
@@ -13,7 +13,9 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
@@ -25,6 +27,8 @@
     },
     "web": {
       "favicon": "./assets/project.png"
-    }
+    },
+    "description": "An simple app using Firebase for authentication and showing data about SpaceX mission from the unofficial SpaceX API.",
+    "githubUrl": "https://github.com/akashdeepnandi/SpaceLytics"
   }
 }
